fix breadcrumb dropdown z-index on product page

--- a/sass/breadcrumb-nav.scss
+++ b/sass/breadcrumb-nav.scss
@@ -1,6 +1,6 @@
 .breadcrumb-nav-wrapper {
   position: relative;
-  z-index: 1;
+  z-index: 100;
 }
 
 .breadcrumb-nav {
